--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,3 +13,4 @@ spring:
           google:
             client-id: ${GOOGLE_CLIENT_ID}
             client-secret: ${GOOGLE_CLIENT_SECRET}
+            scope: openid, email, profile
