WebSockets logic implemented and order dto created

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,11 @@ spring:
     username: postgres
     password: 4560
   jpa:
+    show:
+      sql: true
+    properties:
+      hibernate:
+        format_sql: true
     hibernate:
       ddl-auto: update
   security:
@@ -14,3 +19,17 @@ spring:
             client-id: ${GOOGLE_CLIENT_ID}
             client-secret: ${GOOGLE_CLIENT_SECRET}
             scope: openid, email, profile
+logging:
+  level:
+    root:
+      com:
+        ren:
+          orderingSystem: DEBUG
+    org:
+      hibernate:
+        SQL: DEBUG
+      springframework:
+        messaging: DEBUG
+        web:
+          socket: DEBUG
+
