Order status dto changed and order status is updating properly via frontend

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/ren
+    url: jdbc:postgresql://localhost:5432/Ren
     username: postgres
     password: 4560
   jpa:
